Related to #71. Use List.of(...) instead of new ArrayList(Arrays.asList(...))